--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,46 @@
 <div id="login">
     <div class="content">
-        <h2>LOGO</h2>
+        <img src="../assets/imgs/logo.png" class="logo" alt="">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="form-group">
+                    <input type="email" class="form-control" id="exampleInputPassword1" placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña">
+                </div>
+            </div>
+            <div class="col-sm-12 text-right">
+                <div class="form-group">
+                    <a href="" class="forget-password">Olvidé mi contraseña</a>
+                </div>
+            </div>
+            <div class="col-sm-12">
+                <div class="form-group">
+                    <button class="btn btn-block btn-white text-centere">ENTRAR</button>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="form-group">
+                    <button class="btn btn-block btn-white btn-google text-center">
+                        <img src="assets/imgs/Google__G__Logo.png" alt="">
+                        Google
+                    </button>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="form-group">
+                    <button class="btn btn-block btn-facebook text-center">
+                        <img src="assets/imgs/iconmonstr-facebook-6.png" alt="">
+                        Facebook
+                    </button>
+                </div>
+            </div>
+            <div class="col-sm-12">
+                <div class="form-group">
+                    <button class="btn btn-block btn-yellow text-centere text-capitalize">Crear Una Cuenta</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
