--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,5 +1,53 @@
-#login{
-    width: 100%;;
-    height: 100%;
-    background-color: #ffbe00;
+#login {
+  width: 100%;
+  height: 100%;
+  background-color: #ffbe00;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  .content {
+    width: 324px;
+    height: auto;
+
+    .logo {
+      display: block;
+      margin: 0 auto 50px;
+    }
+
+    .form-group {
+      .forget-password {
+        font-size: 14px;
+        font-weight: 300;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.21;
+        letter-spacing: normal;
+        text-align: right;
+        color: #ffffff;
+        text-decoration: none;
+      }
+      input {
+        background: transparent;
+        border-radius: 19px;
+        border: 1px solid #fff;
+        height: 38px;
+
+        &::-webkit-input-placeholder {
+          color: #fff;
+          text-align: center;
+        }
+        &:-moz-placeholder {
+          color: #fff;
+        }
+        &::-moz-placeholder {
+          color: #fff;
+        }
+        &:-ms-input-placeholder {
+          color: #fff;
+        }
+      }
+    }
+  }
 }
