--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,15 +1,63 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
-*{
-    padding: 0;
-    margin: 0;
+@import "variables.scss";
+@import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
+* {
+  padding: 0;
+  margin: 0;
 }
-html{
+html {
+  width: 100%;
+  height: 100%;
+  font-family: 'Helvetica Neue Light';
+
+  .btn-white {
+    background: #ffffff;
+    border-radius: 19px;
+    height: 38px;
+    font-size: 14px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.21;
+    letter-spacing: normal;
+    text-align: center;
+    color: #ffbe00;
+  }
+
+  .btn-yellow{
+    background-color: #ffac00;
+    border-radius: 19px;
+    height: 38px;
+    font-size: 14px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.21;
+    letter-spacing: normal;
+    text-align: center;
+    color: #fff;
+  }
+
+  .btn-google{
+    color: #767676;
+  }
+
+  .btn-facebook{
+    background-color: #3b5998 !important;
+    border-radius: 19px;
+    height: 38px;
+    font-size: 14px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.21;
+    letter-spacing: normal;
+    text-align: center;
+    color: #fff;
+  }
+
+  body {
     width: 100%;
     height: 100%;
-
-    body{
-        width: 100%;
-    height: 100%;
-    }
+  }
 }
