--- a/src/app/layouts/app-body/app-body.component.html
+++ b/src/app/layouts/app-body/app-body.component.html
@@ -1,1 +1,6 @@
-<p>app-body works!</p>
+<div class="body">
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
+    <app-footer></app-footer>
+</div>
