--- a/src/app/layouts/app-header/app-header.component.html
+++ b/src/app/layouts/app-header/app-header.component.html
@@ -1,1 +1,27 @@
-<p>app-header works!</p>
+<nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container">
+        <a class="navbar-brand" href="#">
+            <img src="../assets/imgs/logo.png" class="d-inline-block align-top logo" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Cursos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Maestros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Evaluaciones</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
