--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@
 html {
   width: 100%;
   height: 100%;
-  font-family: 'Helvetica Neue Light';
+  font-family: "Helvetica Neue Light";
 
   .btn-white {
     background: #ffffff;
@@ -24,7 +24,7 @@ html {
     color: #ffbe00;
   }
 
-  .btn-yellow{
+  .btn-yellow {
     background-color: #ffac00;
     border-radius: 19px;
     height: 38px;
@@ -38,11 +38,11 @@ html {
     color: #fff;
   }
 
-  .btn-google{
+  .btn-google {
     color: #767676;
   }
 
-  .btn-facebook{
+  .btn-facebook {
     background-color: #3b5998 !important;
     border-radius: 19px;
     height: 38px;
@@ -53,6 +53,35 @@ html {
     line-height: 1.21;
     letter-spacing: normal;
     text-align: center;
+    color: #fff;
+  }
+
+  .card {
+    .card-title {
+      font-weight: normal;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: 1.21;
+      letter-spacing: normal;
+      text-align: left;
+      color: #000000;
+    }
+  }
+
+  .card-shadow {
+    border-radius: 20px;
+    box-shadow: 0 4px 9px 0 rgba(0, 0, 0, 0.16);
+    background-color: #ffffff;
+  }
+
+  .badge{
+    width: 26px;
+    height: 26px;
+    border-radius: 50%;
+  }
+
+  .badge-yellow{
+    background-color: #ffbe00;
     color: #fff;
   }
 
