--- a/src/app/courses/courses-list/courses-list.component.html
+++ b/src/app/courses/courses-list/courses-list.component.html
@@ -7,14 +7,60 @@
                     <div class="col-sm-6">
                         <div class="card card-shadow">
                             <div class="card-body">
-                                This is some text within a card body.
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <h3 class="card-title float-left">Ingles</h3>
+                                        <img src="assets/imgs/courses/usa_flag.png" alt="" class="flag float-right">
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-12">
+                                        <p>Descripción pequeña de los temas del curso</p>
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-6">
+                                        <a href="" class="btn btn-yellow btn-block">Continuar</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="card card-shadow">
                             <div class="card-body">
-                                This is some text within a card body.
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <h3 class="card-title float-left">Frances</h3>
+                                        <img src="assets/imgs/courses/france_flag.png" alt="" class="flag float-right">
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-12">
+                                        <p>Descripción pequeña de los temas del curso</p>
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-6">
+                                        <a href="" class="btn btn-yellow btn-block">Continuar</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card card-shadow">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <h3 class="card-title float-left">Aleman</h3>
+                                        <img src="assets/imgs/courses/germany_flag.png" alt="" class="flag float-right">
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-12">
+                                        <p>Descripción pequeña de los temas del curso</p>
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-6">
+                                        <a href="" class="btn btn-yellow btn-block">Continuar</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -48,6 +94,12 @@
                             </div>
                             <div class="col-sm-6">
                                 <span class="badge badge-light">22</span> <span>Restantes</span>
+                            </div>
+                        </div>
+                        <br><br><br>
+                        <div class="row">
+                            <div class="col-sm-10 offset-sm-1">
+                                <a href="" class="btn btn-yellow btn-block">Continuar</a>
                             </div>
                         </div>
                     </div>
