--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,6 +72,8 @@ html {
     border-radius: 20px;
     box-shadow: 0 4px 9px 0 rgba(0, 0, 0, 0.16);
     background-color: #ffffff;
+    margin-top: 10px;
+    margin-bottom: 10px; 
   }
 
   .badge{
