--- a/src/app/courses/courses-list/courses-list.component.scss
+++ b/src/app/courses/courses-list/courses-list.component.scss
@@ -7,6 +7,16 @@
   h2.card-title {
     font-size: 20px;
   }
+  h3.card-title {
+    font-size: 16px;
+  }
+}
+
+.card-shadow{
+  .flag{
+    width: 24px;
+    height: 24px;
+  }
 }
 
 .wrapper {
