--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,110 @@
-<p>home works!</p>
+<div class="row">
+    <div class="col-sm-8">
+        <div class="card">
+            <div class="card-body">
+                <h1 class="card-title">Cursos disponibles</h1>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="card card-shadow">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <h3 class="card-title float-left">Ingles</h3>
+                                        <img src="assets/imgs/courses/usa_flag.png" alt="" class="flag float-right">
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-12">
+                                        <p>Descripción pequeña de los temas del curso</p>
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-6">
+                                        <a href="" class="btn btn-yellow btn-block">Continuar</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card card-shadow">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <h3 class="card-title float-left">Frances</h3>
+                                        <img src="assets/imgs/courses/france_flag.png" alt="" class="flag float-right">
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-12">
+                                        <p>Descripción pequeña de los temas del curso</p>
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-6">
+                                        <a href="" class="btn btn-yellow btn-block">Continuar</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card card-shadow">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <h3 class="card-title float-left">Aleman</h3>
+                                        <img src="assets/imgs/courses/germany_flag.png" alt="" class="flag float-right">
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-12">
+                                        <p>Descripción pequeña de los temas del curso</p>
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-6">
+                                        <a href="" class="btn btn-yellow btn-block">Continuar</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-4">
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-sm-10 offset-sm-1">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <h2 class="card-title float-left">Ingles</h2>
+                                <img src="assets/imgs/courses/usa_flag.png" alt="" class="flag float-right">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="wrapper">
+                                    <div class="progress-bar">
+                                        <span class="progress-bar-fill" style="width: 70%;"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <span class="badge badge-yellow">4</span> <span>Completas</span>
+                            </div>
+                            <div class="col-sm-6">
+                                <span class="badge badge-light">22</span> <span>Restantes</span>
+                            </div>
+                        </div>
+                        <br><br><br>
+                        <div class="row">
+                            <div class="col-sm-10 offset-sm-1">
+                                <a href="" class="btn btn-yellow btn-block">Continuar</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
