--- a/src/app/courses/courses-list/courses-list.component.html
+++ b/src/app/courses/courses-list/courses-list.component.html
@@ -2,63 +2,121 @@
     <div class="col-sm-8">
         <div class="card">
             <div class="card-body">
-                <h1 class="card-title">Cursos disponibles</h1>
+                <h1 class="card-title">Inglés</h1>
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-sm-4">
                         <div class="card card-shadow">
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-sm-12">
-                                        <h3 class="card-title float-left">Ingles</h3>
-                                        <img src="assets/imgs/courses/usa_flag.png" alt="" class="flag float-right">
+                                        <h3 class="card-title float-left">Clase 1</h3>
+                                        <img src="assets/imgs/courses/check_circle-24px.png" alt="" class="check-class float-right">
                                     </div>
                                     <br>
                                     <div class="col-sm-12">
                                         <p>Descripción pequeña de los temas del curso</p>
                                     </div>
                                     <br>
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-12">
+                                        <a href="" class="btn btn-light btn-block">Repasar</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="card card-shadow">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <h3 class="card-title float-left">Clase 2</h3>
+                                        <img src="assets/imgs/courses/check_circle-24px.png" alt="" class="check-class float-right">
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-12">
+                                        <p>Descripción pequeña de los temas del curso</p>
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-12">
+                                        <a href="" class="btn btn-light btn-block">Repasar</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="card card-shadow">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <h3 class="card-title float-left">Clase 3</h3>
+                                        <img src="assets/imgs/courses/check_circle-24px.png" alt="" class="check-class float-right">
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-12">
+                                        <p>Descripción pequeña de los temas del curso</p>
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-12">
+                                        <a href="" class="btn btn-light btn-block">Repasar</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="card card-shadow">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <h3 class="card-title float-left">Clase 4</h3>
+                                        <img src="assets/imgs/courses/check_circle_outline-24px.png" alt="" class="check-class float-right">
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-12">
+                                        <p>Descripción pequeña de los temas del curso</p>
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-12">
                                         <a href="" class="btn btn-yellow btn-block">Continuar</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6">
-                        <div class="card card-shadow">
+                    <div class="col-sm-4">
+                        <div class="card card-disabled card-shadow">
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-sm-12">
-                                        <h3 class="card-title float-left">Frances</h3>
-                                        <img src="assets/imgs/courses/france_flag.png" alt="" class="flag float-right">
+                                        <h3 class="card-title float-left">Clase 5</h3>
                                     </div>
                                     <br>
                                     <div class="col-sm-12">
                                         <p>Descripción pequeña de los temas del curso</p>
                                     </div>
                                     <br>
-                                    <div class="col-sm-6">
-                                        <a href="" class="btn btn-yellow btn-block">Continuar</a>
+                                    <div class="col-sm-12">
+                                        <a href="" class="btn btn-outline-dark btn-block">En Espera</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6">
-                        <div class="card card-shadow">
+                    <div class="col-sm-4">
+                        <div class="card card-disabled card-shadow">
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-sm-12">
-                                        <h3 class="card-title float-left">Aleman</h3>
-                                        <img src="assets/imgs/courses/germany_flag.png" alt="" class="flag float-right">
+                                        <h3 class="card-title float-left">Clase 6</h3>
                                     </div>
                                     <br>
                                     <div class="col-sm-12">
                                         <p>Descripción pequeña de los temas del curso</p>
                                     </div>
                                     <br>
-                                    <div class="col-sm-6">
-                                        <a href="" class="btn btn-yellow btn-block">Continuar</a>
+                                    <div class="col-sm-12">
+                                        <a href="" class="btn btn-outline-dark btn-block">En Espera</a>
                                     </div>
                                 </div>
                             </div>
@@ -73,35 +131,11 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-sm-10 offset-sm-1">
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <h2 class="card-title float-left">Ingles</h2>
-                                <img src="assets/imgs/courses/usa_flag.png" alt="" class="flag float-right">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <div class="wrapper">
-                                    <div class="progress-bar">
-                                        <span class="progress-bar-fill" style="width: 70%;"></span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <span class="badge badge-yellow">4</span> <span>Completas</span>
-                            </div>
-                            <div class="col-sm-6">
-                                <span class="badge badge-light">22</span> <span>Restantes</span>
-                            </div>
-                        </div>
-                        <br><br><br>
-                        <div class="row">
-                            <div class="col-sm-10 offset-sm-1">
-                                <a href="" class="btn btn-yellow btn-block">Continuar</a>
-                            </div>
-                        </div>
+                        <img src="assets/imgs/courses/usa_flag_x4.png" class="flag" alt="">
+                        <p class="text-center">3/6 Clases Completadas</p>
+                    </div>
+                    <div class="col-sm-6 offset-sm-3">
+                        <a href="" class="btn btn-disabled btn-block">Evaluar</a>
                     </div>
                 </div>
             </div>
