--- a/src/app/classes/class-detail/class-detail.component.html
+++ b/src/app/classes/class-detail/class-detail.component.html
@@ -1,1 +1,202 @@
-<p>class-detail works!</p>
+<div class="row">
+    <div class="col-sm-8">
+        <div class="card">
+            <div class="card-body">
+                <h1 class="card-title">Maestros disponibles</h1>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="card card-shadow">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <img src="https://randomuser.me/api/portraits/women/44.jpg" alt=""
+                                            class="teacher-photo float-left">
+                                    </div>
+                                    <br>
+                                    <br>
+                                    <div class="col-sm-12">
+                                        <div class="form-group">
+                                            <h6 class="cart-title">Alicia Craig</h6>
+                                        </div>
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-12">
+                                        <ul class="rating">
+                                            <li>
+                                                <img class="star" src="assets/imgs/courses/star_24px.png" alt="">
+                                            </li>
+                                            <li>
+                                                <img class="star" src="assets/imgs/courses/star_24px.png" alt="">
+                                            </li>
+                                            <li>
+                                                <img class="star" src="assets/imgs/courses/star_24px.png" alt="">
+                                            </li>
+                                            <li>
+                                                <img class="star" src="assets/imgs/courses/star_24px.png" alt="">
+                                            </li>
+                                            <li>
+                                                <img class="star" src="assets/imgs/courses/star_24px.png" alt="">
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-sm-12">
+                                        <a href="" class="btn btn-yellow btn-block">Llamar</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="card card-shadow">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <img src="https://randomuser.me/api/portraits/men/89.jpg" alt=""
+                                            class="teacher-photo float-left">
+                                    </div>
+                                    <br>
+                                    <br>
+                                    <div class="col-sm-12">
+                                        <div class="form-group">
+                                            <h6 class="cart-title">Theadore Burns</h6>
+                                        </div>
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-12">
+                                        <ul class="rating">
+                                            <li>
+                                                <img class="star" src="assets/imgs/courses/star_24px.png" alt="">
+                                            </li>
+                                            <li>
+                                                <img class="star" src="assets/imgs/courses/star_24px.png" alt="">
+                                            </li>
+                                            <li>
+                                                <img class="star" src="assets/imgs/courses/star_24px.png" alt="">
+                                            </li>
+                                            <li>
+                                                <img class="star" src="assets/imgs/courses/star_24px.png" alt="">
+                                            </li>
+                                            <li>
+                                                <img class="star" src="assets/imgs/courses/star_24px.png" alt="">
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-sm-12">
+                                        <a href="" class="btn btn-yellow btn-block">Llamar</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="card card-shadow">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-sm-12">
+                                        <img src="https://randomuser.me/api/portraits/women/17.jpg" alt=""
+                                            class="teacher-photo float-left">
+                                    </div>
+                                    <br>
+                                    <br>
+                                    <div class="col-sm-12">
+                                        <div class="form-group">
+                                            <h6 class="cart-title">Jennie Roberts</h6>
+                                        </div>
+                                    </div>
+                                    <br>
+                                    <div class="col-sm-12">
+                                        <ul class="rating">
+                                            <li>
+                                                <img class="star" src="assets/imgs/courses/star_24px.png" alt="">
+                                            </li>
+                                            <li>
+                                                <img class="star" src="assets/imgs/courses/star_24px.png" alt="">
+                                            </li>
+                                            <li>
+                                                <img class="star" src="assets/imgs/courses/star_24px.png" alt="">
+                                            </li>
+                                            <li>
+                                                <img class="star" src="assets/imgs/courses/star_24px.png" alt="">
+                                            </li>
+                                            <li>
+                                                <img class="star" src="assets/imgs/courses/star_24px.png" alt="">
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-sm-12">
+                                        <a href="" class="btn btn-light btn-block">Disponible 17:00</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h1 class="card-title">Maestros disponibles</h1>
+                <div class="row">
+                    <div class="col-sm-8">
+                        <div class="card card-shadow">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-sm-2">
+                                        <div class="badge badge-yellow badge-big">
+                                            <h4>01</h4>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <h5>Sesión Escrita</h5>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <a href="" class="btn btn-yellow btn-block">Comenzar</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-4">
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-sm-10 offset-sm-1">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <h2 class="card-title float-left">Avance</h2>
+                                <img src="assets/imgs/courses/usa_flag.png" alt="" class="flag float-right">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="wrapper">
+                                    <div class="progress-bar">
+                                        <span class="progress-bar-fill" style="width: 10%;"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <span class="badge badge-yellow">4</span> <span>Llamadas</span>
+                            </div>
+                            <div class="col-sm-6">
+                                <span class="badge badge-light">22</span> <span>Escritas</span>
+                            </div>
+                        </div>
+                        <br><br><br>
+                        <div class="row">
+                            <div class="col-sm-10 offset-sm-1">
+                                <a href="" class="btn btn-yellow btn-block">Continuar</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
