--- a/src/app/layouts/app-header/app-header.component.html
+++ b/src/app/layouts/app-header/app-header.component.html
@@ -16,7 +16,7 @@
                     <a class="nav-link" routerLink="/admin/courses">Cursos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Maestros</a>
+                    <a class="nav-link" routerLink="/admin/teachers">Maestros</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Evaluaciones</a>
