--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,23 @@ html {
   height: 100%;
   font-family: "Helvetica Neue Light";
 
+  .btn {
+    border-radius: 19px;
+  }
+
+  .btn-disabled {
+    background-color: #c3c3c3;
+    height: 38px;
+    font-size: 14px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.21;
+    letter-spacing: normal;
+    text-align: center;
+    color: #fff;
+  }
+
   .btn-white {
     background: #ffffff;
     border-radius: 19px;
@@ -68,21 +85,31 @@ html {
     }
   }
 
+  .card-disabled {
+    background-color: #f7f7f7 !important;
+    color: #c3c3c3;
+  }
+
   .card-shadow {
     border-radius: 20px;
     box-shadow: 0 4px 9px 0 rgba(0, 0, 0, 0.16);
     background-color: #ffffff;
     margin-top: 10px;
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
   }
 
-  .badge{
+  .badge {
     width: 26px;
     height: 26px;
     border-radius: 50%;
   }
 
-  .badge-yellow{
+  .badge-big {
+    width: 42px;
+    height: 42px;
+  }
+
+  .badge-yellow {
     background-color: #ffbe00;
     color: #fff;
   }
