--- a/src/app/classes/class-detail/class-detail.component.html
+++ b/src/app/classes/class-detail/class-detail.component.html
@@ -5,7 +5,7 @@
                 <h1 class="card-title">Maestros disponibles</h1>
                 <div class="row">
                     <div class="col-sm-4">
-                        <div class="card card-shadow">
+                        <div class="card card-shadow" routerLink="/admin/teachers/1">
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-sm-12">
