--- a/src/app/layouts/app-body/app-body.component.scss
+++ b/src/app/layouts/app-body/app-body.component.scss
@@ -1,6 +1,8 @@
 .body{
     width: 100%;
-    height: calc(100% - 63.5px);
+    min-height: calc(100% - 63.5px);
+    height: auto;
+    padding-bottom: 50px;
     background: #f7f7f7;
     .container{
         padding-top: 50px;
