--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,10 @@ html {
     border-radius: 19px;
   }
 
+  .text-yellow{
+    color: $app-yellow;
+  }
+
   .btn-disabled {
     background-color: #c3c3c3;
     height: 38px;
