All teachers are one

--- a/src/app/classes/class-detail/class-detail.component.html
+++ b/src/app/classes/class-detail/class-detail.component.html
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                     <div class="col-sm-4">
-                        <div class="card card-shadow">
+                        <div class="card card-shadow" routerLink="/admin/teachers/1">
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-sm-12">
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                     <div class="col-sm-4">
-                        <div class="card card-shadow">
+                        <div class="card card-shadow" routerLink="/admin/teachers/1">
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-sm-12">
